# tradingbot

./: .bulk-progress.json  .dockerignore  .env.example  .eslintrc.js  .gitignore  .klines-progress.json  .trading-status.json  ALLOCATION_SETUP_README.md  BACKTEST_SPEC.html  CHEAP_DATABASE_STRATEGY.md  CLAUDE.md  COMPLETE_SETUP_GUIDE.md  COMPLETION_SUMMARY.md  COMPLIANCE_REPORT.md  CONSOLIDATION_COMPLETE.md  COST_OPTIMIZED_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.api-only  Dockerfile.simple  Dockerfile.trading  ENHANCED_INTEGRITY_VALIDATION.md  FINAL_VALIDATION_SUMMARY.md  GLICKO_INTEGRITY_REPORT.md  GLICKO_SPEC.html  INTEGRITY_VALIDATION_COMPLETE.md  MIGRATION_GUIDE.md  PARAMETER_OPTIMIZATION_EXAMPLES.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_COMPLETION.txt  QUICK_START_GUIDE.md  README.md  SPEC.md  STAGE_EXECUTION_GUIDE.md  START_HERE.md  TRADING_ENGINE_DEPLOYMENT.md  VALIDATION_FILES_INDEX.md  VALIDATION_QUICK_REFERENCE.md  (+18 more)
__test__/: GlickoEngine.test.ts  GlickoMath.test.ts  OCOOrderService.test.ts  SignalGeneratorService.test.ts  algorithms.test.ts  api.test.ts  database.test.ts  glicko.test.ts  rust-service.test.ts  services.test.ts  setup.ts  utils.test.ts
analysis/: ETH-USDT-Backtest-Investigation-Summary.md  trading-pairs.txt
config/: filtered-trading-pairs.json  live-params.json  optimized-params.json  robust-params.json
docs/: ALLOCATION_STRATEGY_GUIDE.md  AWS_HANDBOOK.md  BACKTEST_QUERY_GUIDE.md  (+18 more)
src/rust-core/: Cargo.toml
src/rust-core/src/: backtest.rs  data.rs  glicko.rs  lib.rs  main.rs
(+201 files in other folders)
