[package]
name = "glicko-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "glicko_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
ndarray = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[dependencies.uuid]
version = "1.6"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]